Ensure 'shorcuts' text is vertically aligned

--- a/scss/_sphinx_base.scss
+++ b/scss/_sphinx_base.scss
@@ -820,6 +820,11 @@ article.pytorch-article {
 
   .pytorch-breadcrumbs-aside {
     float: right;
+
+    .fa.fa-github {
+      margin-top: 2px;
+      display: block;
+    }
   }
 }
 
